[package]
name = "deltalake"
version = "1.0.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
# We cannot use all_features because TLS features are mutually exclusive.
features = [
    "azure",
    "datafusion",
    "gcs",
    "hdfs",
    "json",
    "python",
    "s3",
    "unity-experimental",
]

[dependencies]
deltalake-core = { version = "1.0", path = "../core", default-features = false }
deltalake-aws = { version = "1.0", path = "../aws", default-features = false, optional = true }
deltalake-azure = { version = "1.0", path = "../azure", optional = true }
deltalake-gcp = { version = "1.0", path = "../gcp", optional = true }
deltalake-hdfs = { version = "1.0", path = "../hdfs", optional = true }
deltalake-opendal = { version = "1.0", path = "../opendal", default-features = false, optional = true }
deltalake-lakefs = { version = "1.0", path = "../lakefs", optional = true }
deltalake-catalog-glue = { version = "1.0", path = "../catalog-glue", optional = true }
deltalake-catalog-unity = { version = "1.0", path = "../catalog-unity", optional = true }
delta_kernel = { workspace = true }
ctor = "0.10"

[features]
# All of these features are just reflected into the core crate until that
# functionality is broken apart
azure = ["deltalake-azure"]
default = ["rustls"]
datafusion = ["deltalake-core/datafusion"]
datafusion-ext = ["datafusion"]
gcs = ["deltalake-gcp"]
glue = ["deltalake-catalog-glue"]
hdfs = ["deltalake-hdfs"]
json = ["deltalake-core/json"]
nanosecond-timestamps = ["deltalake-core/nanosecond-timestamps"]
python = ["deltalake-core/python"]
s3-native-tls = ["deltalake-aws/native-tls", "native-tls"]
s3 = ["deltalake-aws/rustls", "rustls"]
unity-experimental = ["deltalake-catalog-unity"]
# Generic OpenDAL plumbing (no service). Enable a specific backend with one of
# the `opendal-*` or `hf` features below; each auto-registers its scheme.
opendal = ["deltalake-opendal"]
hf = ["opendal", "deltalake-opendal/hf", "deltalake-opendal/rustls"]
opendal-fs = ["opendal", "deltalake-opendal/opendal-fs"]
opendal-memory = ["opendal", "deltalake-opendal/opendal-memory"]
opendal-s3 = ["opendal", "deltalake-opendal/opendal-s3", "deltalake-opendal/rustls"]
opendal-gcs = ["opendal", "deltalake-opendal/opendal-gcs", "deltalake-opendal/rustls"]
opendal-azblob = ["opendal", "deltalake-opendal/opendal-azblob", "deltalake-opendal/rustls"]
opendal-azdls = ["opendal", "deltalake-opendal/opendal-azdls", "deltalake-opendal/rustls"]
opendal-oss = ["opendal", "deltalake-opendal/opendal-oss", "deltalake-opendal/rustls"]
opendal-obs = ["opendal", "deltalake-opendal/opendal-obs", "deltalake-opendal/rustls"]
opendal-cos = ["opendal", "deltalake-opendal/opendal-cos", "deltalake-opendal/rustls"]
opendal-tos = ["opendal", "deltalake-opendal/opendal-tos", "deltalake-opendal/rustls"]
opendal-b2 = ["opendal", "deltalake-opendal/opendal-b2", "deltalake-opendal/rustls"]
opendal-swift = ["opendal", "deltalake-opendal/opendal-swift", "deltalake-opendal/rustls"]
opendal-webhdfs = ["opendal", "deltalake-opendal/opendal-webhdfs", "deltalake-opendal/rustls"]
opendal-webdav = ["opendal", "deltalake-opendal/opendal-webdav", "deltalake-opendal/rustls"]
opendal-ftp = ["opendal", "deltalake-opendal/opendal-ftp"]
opendal-sftp = ["opendal", "deltalake-opendal/opendal-sftp"]
lakefs = ["deltalake-lakefs"]
native-tls = ["deltalake-core/native-tls"]
rustls = ["deltalake-core/rustls"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { workspace = true, default-features = false, features = ["clock"] }
tracing = { workspace = true }
url = { workspace = true }

[[example]]
name = "basic_operations"
required-features = ["datafusion"]

[[example]]
name = "load_table"
required-features = ["datafusion"]

[[example]]
name = "recordbatch-writer"

[package.metadata.cargo-machete]
ignored = ["deltalake-catalog-glue"]
