[package]
name = "deltalake-derive"
version = "0.27.0"
description = "Dervice macros for use in delta ecosystem crates"
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
convert_case = "0.8.0"
itertools = "0.14"
