[package]
name = "deltalake-logstore"
version = "0.29.2"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description = "Delta Lake logstore abstraction"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deltalake-derive = { version = "0.29.0", path = "../derive" }
deltalake-types = { version = "0.29.2", path = "../types" }

delta_kernel.workspace = true

# arrow
bytes = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# runtime
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }

# other deps
dashmap = "6"
object_store = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4"] }
humantime = { version = "2.1.0", optional = true }

[dev-dependencies]
deltalake-test = { path = "../test" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rstest = { workspace = true }

[features]
default = ["rustls"]
rustls = ["delta_kernel/default-engine-rustls"]
native-tls = ["delta_kernel/default-engine-native-tls"]
cloud = ["object_store/cloud", "dep:humantime"]

[package.metadata.docs.rs]
features = ["cloud"]

